# telnyx-outbound-hold-agent-cookbook

./: .env.example  CLAUDE.md  README.md  pyproject.toml
docs/: dev-blog-building-an-outbound-hold-agent.md  how-it-works.md
examples/a2a-hotel-demo/: README.md  demo-script.md  fake-hotel-assistant-prompt.md  representative-context.json  tool-config.md
prompts/: assistant-prompts.md
src/telnyx_hold_agent/: __init__.py  cli.py  config.py  detectors.py  models.py  orchestrator.py  security.py  server.py  state.py  telnyx_client.py
tests/: test_detectors.py  test_fake_company.py  test_orchestrator_extractors.py  test_representative_greeting.py  test_tool_error_handling.py  test_tool_fallback.py  test_tool_payloads.py
