[project]
name = "telnyx-outbound-hold-agent-cookbook"
version = "0.1.0"
description = "Reusable Telnyx Call Control cookbook for outbound AI calls that pause assistants during hold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.1",
  "uvicorn[standard]>=0.30.0",
  "PyNaCl>=1.5.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0"
]

[project.scripts]
hold-agent = "telnyx_hold_agent.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

